# Rust

./: .env.example  .gitignore  Cargo.toml  Example.Secrets.toml  LICENSE  README.md  Secrets.toml exsample  flake.nix
.github/: dependabot.yml
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/dash/: Cargo.toml
crates/dash/src/: lib.rs  main.rs
src/: eventhandler.rs  handler.rs  main.rs  server.rs
src/pages/: mod.rs
