[package]
name = "cordevall"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.7.5"
console_error_panic_hook = "0.1.7"
leptos = "0.6.12"
leptos_axum = "0.6.12"
leptos_meta = "0.6.12"

leptos_router = "0.6.12"
anyhow = "1.0.86"
poise = "0.6.1"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["full"] }

tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
wasm-bindgen = "0.2.92"
thiserror = "1.0.61"
http = "1.1.0"
dotenv = "0.15.0"
futures = "0.3.30"


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "cordevall-rs"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "DEV"
browserquery = "defaults"
lib-profile-release = "wasm-release"
